--- a/assets/component-predictive-search.css
+++ b/assets/component-predictive-search.css
@@ -28,7 +28,14 @@
   padding-bottom: 1rem;
 }
 
-@media screen and (max-width: 749px) {
+@media screen and (max-width: 989px) {
+	.header__search.search--active {
+		width: 100%;
+		height: 100%;
+		left: 0;
+		top: 0;
+	}
+
   .predictive-search--header {
     right: 0;
     left: 0;
